# real_state_django

./: Procfile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: projeto_django.yml
contacts/: views.py
contacts/migrations/: 0002_alter_contact_id.py
contrib/: env-sample
listings/: choices.py
listings/migrations/: 0002_alter_listing_id.py
pages/: views.py
realestate/: settings.py  urls.py
realestate/static/css/: bootstrap.css
realtors/migrations/: 0002_alter_realtor_id.py
templates/: base.html
templates/pages/: about.html  index.html
templates/partials/: _footer.html  _navbar.html  _topbar.html
