[tool.poetry]
name = "Real state django"
version = "0.1.0"
description = "Sistema de gestao de imoveis feito em django"
authors = ["wfoschiera <wfoschiera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
Pillow = "^8.2.0"
gunicorn = "^20.1.0"
paytmchecksum = "^1.7.0"
pycryptodome = "^3.10.1"
whitenoise = "^5.2.0"
python-decouple = "^3.4"
sentry-sdk = "^1.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"
cloudinary = "^1.25.0"
django-cloudinary-storage = "^0.3.0"
Collectfast = "^2.2.0"
django-debug-toolbar = "^3.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
heroku = "^0.1.4"
codecov = "^2.1.11"
pytest-django = "^4.4.0"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
